* New scenes for the lizards, written by me:
 - A new loss scene for the female.
 - A new win scene for the female.
* Quest items are now correctly removed when turning in the Burrows quests.
* Restructured the end of combat so the Defeat/Win screen with exp and loot always shows up first. Report if there are fights that don't behave this way (or are suddenly acting odd).

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3t2
-------------
* Fixed a bug where Lagon fight would repeat after siding with Lagon. Doing this also removes the scepter, as intended.
* Fixed a bug in Mothgirl win for female players.
* You can now leave the Mothgirl battle without playing a sex scene.

Version 0.3t
------------
* The search for the scepter is on! Includes about 10k words worth of scenes written by Fenoxo. The Gol has two loss scenes and three win scenes.
* The attack on Lagon has begun!
 - There is a new option to stand up to Lagon when turning in the final ingredient. This will lock you out of the burrows until you resolve the situation.
 - You can choose to Usurp Lagon after you've turned in the final ingredient.
 - Bringing the scepter back brings things to a head, whether you want it or not.
 - There are at least three unique bad ends to be had, and two "success states", depending on who you side with.
 - Vena's restoration isn't implemented yet.
* Mothgirl added, written by Savin. She can be encountered in the forest, and has 2 loss scenes and 3 win scenes.
* It's now a bit easier to figure out which enemy is which and what the order of turns is. Enemies all have a unique number following their name.
* Momo is now available in camp (when rescued) from 4:00 to 21:00.
* The ability to add comments to saves has been added (thanks kspriv!)
* Inventory management just got a hell of a lot cleaner (applies to shops, inventory and combat inventory). Thanks kspriv!